--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "nodemon src/app.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +19,13 @@
     "gulp-nunjucks": "^5.1.0",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^5.0.0",
+    "koa": "^2.13.4",
+    "koa-router": "^10.1.1",
+    "koa-static": "^5.0.0",
+    "koa-views": "^7.0.1",
     "node-sass": "^6.0.1",
+    "nodemon": "^2.0.14",
+    "nunjucks": "^3.2.3",
     "sass-lint": "^1.13.1"
   }
 }
