--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon src/app.js"
+    "serve": "nodemon src/app.js",
+    "start": "node ./app.js"
   },
   "author": "",
   "license": "ISC",
