--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "db2_project",
   "version": "1.0.0",
   "description": "",
-  "main": "gulpfile.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "nodemon src/app.js",
