--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
+    "eslint:init": "eslint --init",
+    "eslint:fix": "eslint --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "nodemon src/app.js",
     "start": "node ./src/app.js"
@@ -11,13 +13,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.3.6",
+    "dotenv": "^10.0.0",
+    "joi": "^17.4.2",
     "koa": "^2.13.4",
+    "koa-bodyparser": "^4.3.0",
+    "koa-joi-router": "^8.0.0",
     "koa-router": "^10.1.1",
     "koa-static": "^5.0.0",
     "koa-views": "^7.0.1",
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.14",
     "nunjucks": "^3.2.3",
+    "pg": "^8.7.1",
+    "sass": "^1.43.3",
     "sass-lint": "^1.13.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.25.2"
   }
 }
