--- a/package.json
+++ b/package.json
@@ -13,18 +13,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^3.1.0",
+    "bcrypt": "^5.0.1",
     "config": "^3.3.6",
+    "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "joi": "^17.4.2",
+    "jwt-simple": "^0.5.6",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-joi-router": "^8.0.0",
+    "koa-passport": "^4.1.4",
     "koa-router": "^10.1.1",
     "koa-static": "^5.0.0",
     "koa-views": "^7.0.1",
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.14",
     "nunjucks": "^3.2.3",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "sass": "^1.43.3",
     "sass-lint": "^1.13.1"
