--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "eslint:init": "eslint --init",
-    "eslint:fix": "eslint --fix",
+    "eslint:fix": "eslint --fix --ext .js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "nodemon src/app.js",
     "start": "node ./src/app.js"
